# balancing-robot-shield-firmware

./: CMakeLists.txt  Kconfig  prj.conf  west.yml
boards/arm/pca63539_nrf52832/: Kconfig.board  Kconfig.defconfig  pca63539_nrf52832.dts  pca63539_nrf52832_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/qdec_gpio/: CMakeLists.txt  Kconfig  qdec_gpio.c
dts/bindings/: nordic,qdec-gpio.yaml
src/: main.c
